--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <div id=initial>
       <b>I</b>
     </div>
-    <div id="user">Hi, <b>Ifeanyi</b> <i>!</i></div>
+    <div id="user">Hellow, <b>Ifeanyi</b> <i>!</i></div>
     <form>
         <input type="password" name="pwd" id="pwd" placeholder="Password" required> 
         <button type="button" id="eye"></button> 
