--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
           </div>
             <div id="age">11yrs</div>
               <div id="job">student</div>
-              <div id="dob>"oct 9 2013 ></div>
+              <div id="dob"></div>oct 9 2013 ></div>
             </div>
           </div>
         </div>
