responsive design changes

--- a/index.html
+++ b/index.html
@@ -2,15 +2,13 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=adevice-width, initial-scale=1.0">
-
-  <link rel="stylesheet" href="style.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>era</title>
-  <link rel="stylesheet" href="index.css">  
+    <link rel="stylesheet" href="index.css">  
 </head>
 <body>
     <div id=initial>
-      <b>I</b>
+      <p>I</b>
     </div>
     <div id="user">Hellow, <b>Ifeanyi</b> <i>!</i></div>
     <form>
@@ -22,22 +20,19 @@
       <div id="wrap">
         <div id="panel">
           <div id="flag"></div>
-          <div id="username">@Ifeanyi okonkwo
-          </div>
-            <div id="age">11yrs</div>
-              <div id="job">student</div>
-              <div id="dob"></div>oct 9 2013 ></div>
-            </div>
-          </div>
+          <div id="username">@Ifeanyi okonkwo</div>
+          <div id="age">12yrs</div>
+          <div id="job">student</div>
+          <div id="dob"></div>   
         </div>
-        <button type="button" id="start">
-          <div></div>
-        </button>
-      </div> 
+        
       </div>
-
-
-              
+          <button type="button" id="start">
+            <div></div>
+          </button>
+        </div>
+      </div> 
+    </div>
     <script src="index.js"></script>
 </body>
 </html>
