--- a/index.html
+++ b/index.html
@@ -23,8 +23,9 @@
           <div id="username">@Ifeanyi okonkwo</div>
           <div id="age">12yrs</div>
           <div id="job">student</div>
-          <div id="dob"></div>   
-        </div>
+          <div id="dob"></div> 
+          <a href="wordsmith.html">ws</a>  
+        <div id="age"></div>
         
       </div>
           <button type="button" id="start">
