--- a/wordsmith.html
+++ b/wordsmith.html
@@ -32,8 +32,8 @@
             <i>0</i>
         </span>
         <button type="button" id="checkBtn">
-            <span>CHECK</span>
-            <i></i>
+            <div id="d">CHECK</div>
+            <div id="lan"></div>
         </button>
     </div>
     <footer>
